Center new windows
We did some GNOME OS testing at the hackfest today, and most apps open off-center, including the installer and initial setup:
Later in the real session some apps (e.g. Software) open centered, but only if they're the first window on the workspace. Others, including Files, never open centered. We also had issues with this during user research sessions last year. It's probably one of the most noticeable issues you run into in the first few minutes of running GNOME, so it'd be really nice to finally address it.
There is a "just center all new windows" flag, which works fine most of the time (and is probably a better default than the status quo as-is even), but there are a few papercuts with it:
- Opening new windows that are exactly the same size as previous windows (because you get ugly double shadows)
- Windows that were previously tiled end up as full-height, centered, and non-tiled, which looks awkward. If you open two of them they end up overlapping in the center, so you also get the double shadow issue.
Proposal:
All non-maximized windows open centered both vertically and horizontally, with these exceptions:
- If there is already a window with the same exact dimensions on the workspace, cascade the new window down/right by 20px or so
- For tiled windows ideally remember their tiling state/position (so they never overlap with double shadows), or if that's not possible disable the centering behavior for windows that are >= the height of the display
I know there are some exisiting issues and MRs for this, but it's not clear to me what exactly the conclusion was based on those. I think it'd be good to take a fresh look at this based on the current status quo.